--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Rezapmob"
         tools:targetApi="31">
         <activity
+            android:name=".MapsMushola"
+            android:exported="false" />
+        <activity
+            android:name=".MapsKampusActivity"
+            android:exported="false" />
+        <activity
             android:name=".MapsOleh"
             android:exported="false" />
         <activity
